--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
-    <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Pheonix Park">
+    <meta name="description"
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Pheonix Park">
     <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <!-- Title -->
     <title>Love Running</title>
@@ -14,26 +15,46 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <!-- Stylesheet -->
-     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-<header>
-    <a href="index.html">
-        <h1 id="logo">Love Running</h1>
-    </a>
-    <input type="checkbox" id="nav-toggle" name="nav-toggle">
-    <label for="nav-toggle" class="nav-toggle-label">X</label>
-    <nav>
-        <ul id="menu">
-            <li><a href="" class="active">Home</a></li>
-            <li><a href="">Gallery</a></li>
-            <li><a href="">Sign Up</a></li>
+    <!-- Header -->
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Love Running</h1>
+        </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <nav>
+            <ul id="menu">
+                <li><a href="" class="active">Home</a></li>
+                <li><a href="">Gallery</a></li>
+                <li><a href="">Sign Up</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- Main Content -->
+    <main>Main Content</main>
+    <!-- Footer -->
+    <footer>
+        <ul>
+            <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li><a href="https://www.twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in new tab)"><i
+                        class="fa-brands fa-square-twitter"></i></a></li>
+            <li><a href="https://www.youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Youtube page (opens in new tab)"><i class="fa-brands fa-youtube"></i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
         </ul>
-    </nav>
-</header>
-<main>Main Content</main>
-<footer>Footer</footer>
+    </footer>
+
+    <!-- Font Awesome Kit -->
+    <script src="https://kit.fontawesome.com/0c6c9aa966.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
